# GPC_21

./: .gitmodules  CMakeLists.txt
freeglut/t1/: main.cpp
freeglut/t2/: main.cpp
freeglut/t3/: main.cpp
freeglut/t5/: main.cpp
glfw/t1/: main.cpp
